po: update po/ca_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 11:40+0000\n"
+"PO-Revision-Date: 2017-02-14 22:59+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -420,7 +420,7 @@ msgstr "Opció de producte "
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Fulfilled Date"
-msgstr "Data lliurada"
+msgstr "Data del lliurament"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Interval (number of units)"
@@ -680,7 +680,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Fulfilled"
-msgstr ""
+msgstr "Lliurat"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ManagePremiums.php
@@ -2383,7 +2383,7 @@ msgstr ""
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Payment Details"
-msgstr ""
+msgstr "Detalls de pagament"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "The date this payment was received."
@@ -2836,7 +2836,7 @@ msgstr "Automàticament enviar un rebut per correu electrònic per aquesta contr
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Date that a receipt was sent to the contributor."
-msgstr "Data en que el rebut se li ha enviat al donant."
+msgstr "Data en que s'ha enviat un rebut al contribuent."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Cancellation or Refund Information"
@@ -5080,7 +5080,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "-select product-"
-msgstr ""
+msgstr "-selecciona el producte-"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Accounting Period to Close"
