po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 09:54+0000\n"
+"PO-Revision-Date: 2017-02-14 23:02+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -9752,7 +9752,7 @@ msgstr "Import net"
 
 #: CRM/Core/SelectValues.php
 msgid "Non-deductible Amount"
-msgstr ""
+msgstr "Import no deduïble"
 
 #: CRM/Core/SelectValues.php
 msgid "Contribution Receive Date"
@@ -25149,7 +25149,7 @@ msgstr ""
 #: CRM/Core/BAO/UFField.php CRM/Core/OptionValue.php CRM/Core/SelectValues.php
 #: CRM/Export/BAO/Export.php xml/templates/civicrm_data.tpl
 msgid "Payment Method"
-msgstr ""
+msgstr "Mètode de pagament"
 
 #: CRM/Core/BAO/UFField.php
 msgid "Contribution Transaction ID"
@@ -26565,7 +26565,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Payment Methods"
-msgstr ""
+msgstr "Mètodes de pagament"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
