po: update po/ca_ES/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2016
+# francescbassas <francesc@babu.cat>, 2013-2017
 # francescbassas <francesc@babu.cat>, 2013
 # ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 13:24+0000\n"
+"PO-Revision-Date: 2017-02-14 22:59+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1299,7 +1299,7 @@ msgstr "Opció de recompensa "
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Data de lliurament de la recompensa"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 #: CRM/Report/Form/Member/Detail.php
