--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -14,6 +14,7 @@
 # Ettore Atalan <atalanttore@googlemail.com>, 2015-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Finn F <ffmoto95@gmail.com>, 2016
+# Guenter Hauptvogel <guenter986@gmail.com>, 2017
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Michal Seidler, 2011, 2012
 # Joan Nguyen <doannt2909@gmail.com>, 2013
@@ -31,8 +32,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-14 09:50+0000\n"
+"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2178,7 +2179,7 @@ msgstr "Zahlungsmethoden"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Berechnungszeitraum beenden"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2223,7 +2224,7 @@ msgstr "Erweiterungen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Meine Berichte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
