--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -15,6 +15,7 @@
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
+# Guenter Hauptvogel <guenter986@gmail.com>, 2017
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2012
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2014-2015
@@ -33,8 +34,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-14 10:10+0000\n"
+"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1475,7 +1476,7 @@ msgstr ""
 
 #: CRM/Event/Info.php
 msgid "edit event participants"
-msgstr ""
+msgstr "Teilnehmer bearbeiten"
 
 #: CRM/Event/Info.php
 msgid "Record and update backend event registrations"
@@ -1507,7 +1508,7 @@ msgstr ""
 
 #: CRM/Event/Info.php
 msgid "view event participants"
-msgstr ""
+msgstr "Veranstaltungsteilnehmer anzeigen"
 
 #: CRM/Event/Info.php
 msgid "delete in CiviEvent"
@@ -1515,7 +1516,7 @@ msgstr ""
 
 #: CRM/Event/Info.php
 msgid "Delete participants and events that you can edit"
-msgstr ""
+msgstr "Teilnehmer und Veranstaltung die editierbar sind löschen"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
@@ -3830,7 +3831,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Teilnehmer löschen"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
