po: update po/de_DE/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -12,6 +12,7 @@
 # Finn F <ffmoto95@gmail.com>, 2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
+# Guenter Hauptvogel <guenter986@gmail.com>, 2017
 # Michal Seidler, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2015
@@ -32,8 +33,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-16 16:35+0000\n"
-"Last-Translator: Thomas Schuettler\n"
+"PO-Revision-Date: 2017-02-14 09:45+0000\n"
+"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1263,7 +1264,7 @@ msgstr "Auf Antworten automatisch antworten"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
-msgstr ""
+msgstr "Automatische Antwort"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
@@ -1281,7 +1282,7 @@ msgstr ""
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr ""
+msgstr "Nur-Text-Format"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
@@ -1366,7 +1367,7 @@ msgstr "Kopf- und Fußbereich"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Responses"
-msgstr ""
+msgstr "Reaktionen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Review and Schedule"
@@ -1432,7 +1433,7 @@ msgstr "~%1 Empfänger"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
-msgstr ""
+msgstr "Vorschau..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
@@ -1460,7 +1461,7 @@ msgstr ""
 msgid ""
 "The mailing must include the street address of the organization. Please "
 "insert the %1 token."
-msgstr ""
+msgstr "Der Newsletter muss die Anschrift des Unternehmens beinhalten. Bitte fügen sie den %1 Wert ein."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -1780,15 +1781,15 @@ msgstr ""
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
-msgstr ""
+msgstr "Test Newsletter A"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing B"
-msgstr ""
+msgstr "Test Newsletter B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Final Mailing"
-msgstr ""
+msgstr "Final Newsletter"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid ""
@@ -2326,7 +2327,7 @@ msgstr ""
 msgid ""
 "To send separate messages for each person, disable this option. Mail-merge "
 "tokens will be filled separately for each person."
-msgstr ""
+msgstr "Um an jeden Empfänger eine seperate Nachricht zu senden, deaktivieren sie diese Option. Die Nachriten werden damit personalisiert."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2540,7 +2541,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
-msgstr ""
+msgstr "Kampagnen %1 %2"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Bounce Pattern ID"
@@ -2568,7 +2569,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/TrackableURL.php
 msgid "Trackable URL ID"
-msgstr ""
+msgstr "Verfolgbare URL ID"
 
 #: CRM/Mailing/Event/DAO/Bounce.php
 msgid "Bounce ID"
@@ -2582,11 +2583,11 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Delivered.php
 msgid "Delivered ID"
-msgstr ""
+msgstr "Zugestellt ID"
 
 #: CRM/Mailing/Event/DAO/Forward.php
 msgid "Forward ID"
-msgstr ""
+msgstr "Weiterleitung ID"
 
 #: CRM/Mailing/Event/DAO/Forward.php
 msgid "Destination Queue"
@@ -2618,7 +2619,7 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Public View"
-msgstr ""
+msgstr "Öffentliche Ansicht"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
