po: update po/de_DE/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -9,6 +9,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
+# Guenter Hauptvogel <guenter986@gmail.com>, 2017
 # Michal Seidler, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Lutz Pawske <lutz@pawske.de>, 2013
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-14 10:33+0000\n"
+"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1493,7 +1494,7 @@ msgstr "Filter"
 
 #: CRM/Report/Form.php
 msgid "Display Options"
-msgstr ""
+msgstr "Darstellungsart"
 
 #: CRM/Report/Form.php
 msgid "Chart"
@@ -1897,7 +1898,7 @@ msgstr "Sie haben diesen Bericht zur Aufnahme in das Navigationsmenü ausgeählt
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "(copy)"
-msgstr ""
+msgstr "(Kopie)"
 
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
 msgid "Section Header / Group By"
@@ -2069,11 +2070,11 @@ msgstr "Es gibt zur Zeit keine Reportvorlagen."
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Save a copy..."
-msgstr ""
+msgstr "Kopie speichern..."
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "(Copy) "
-msgstr ""
+msgstr "(Kopie)"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Print to PDF"
@@ -2081,16 +2082,16 @@ msgstr ""
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Export as CSV"
-msgstr ""
+msgstr "Als CSV exportieren"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Bericht löschen"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid ""
 "Are you sure you want delete this report? This action cannot be undone."
-msgstr ""
+msgstr "Wollen Sie diesen Bericht wirklich löschen? Dies kann nicht rückgängig gemacht werden."
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
@@ -2148,7 +2149,7 @@ msgstr ""
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Duration (in Minutes)"
-msgstr ""
+msgstr "Gesamtdauer (in Minuten)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
@@ -2342,7 +2343,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
-msgstr ""
+msgstr "Details für dieses Mailing anzeigen"
 
 #: CRM/Report/Form/Member/Lapse.php
 msgid "Lapsed Memberships"
@@ -2354,7 +2355,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Entwickler"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
@@ -2366,7 +2367,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Do not SMS"
-msgstr ""
+msgstr "Keine SMS"
 
 #: CRM/Report/Form.php
 msgid "Do not bulk email"
@@ -2374,11 +2375,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
-msgstr ""
+msgstr "Ergebnisse aktualisieren"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Ergebnisse anzeigen"
 
 #: CRM/Report/Info.php
 msgid "administer private reports"
@@ -2386,11 +2387,11 @@ msgstr ""
 
 #: CRM/Report/Info.php
 msgid "Edit all private reports"
-msgstr ""
+msgstr "Private Berichte bearbeiten"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
-msgstr ""
+msgstr "SQL Bericht ansehen"
 
 #: CRM/Report/Info.php
 msgid "View sql used in CiviReports"
@@ -2398,15 +2399,15 @@ msgstr ""
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
-msgstr ""
+msgstr "Als PDF anzeigen"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "Bericht drucken"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "Als CSV exportieren"
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
@@ -2435,7 +2436,7 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Add to My Reports"
-msgstr ""
+msgstr "Zu meinen Berichten hinzufügen"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
