po: update po/hr/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hr/admin.po
+++ b/po/hr/admin.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Jurica Mikulić <jurica.mikulic@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-14 22:21+0000\n"
+"Last-Translator: Jurica Mikulić <jurica.mikulic@gmail.com>\n"
 "Language-Team: Croatian (http://www.transifex.com/civicrm/civicrm/language/hr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,137 +19,137 @@ msgstr ""
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Basic Contact Type"
-msgstr ""
+msgstr "Osnovni tip kontakta"
 
 #: CRM/Admin/Form/ContactType.php
 msgid ""
 "This contact type name already exists in database. Contact type names must "
 "be unique."
-msgstr ""
+msgstr "Ovo ime tipa kontakta već postoji u bazi. Ime tipa kontakta mora biti jedinstveno."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "Imena tipova kontakata ne bi smjela koristiti rezervirane ključne riječi."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
-msgstr ""
+msgstr "Odabrani tip kontakta je obrisan."
 
 #: CRM/Admin/Form/ContactType.php
 msgid ""
 "Selected contact type can not be deleted. Make sure contact type doesn't "
 "have any associated custom data or group."
-msgstr ""
+msgstr "Odabrani tip kontakta ne može biti obrisan. Osigurajte da tip kontakta nema povezane prilagođene podatke ili grupu."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
-msgstr ""
+msgstr "Tip kontakta '%1' je spremljen."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
-msgstr ""
+msgstr "Administrator sustava je onemogućio ovu funkcionalnost."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
-msgstr ""
+msgstr "Nepodržana akcija"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
-msgstr ""
+msgstr "Instaliraj"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Instalirati \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
-msgstr ""
+msgstr "Preuzmi i instaliraj"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Preuzeti i instalirati \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
-msgstr ""
+msgstr "Deinstaliraj"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Deinstalirati \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Omogućiti \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Onemogućiti \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
-msgstr ""
+msgstr "Ekstenzija deinstalirana"
 
 #: CRM/Admin/Form/Extensions.php
 msgid ""
 "Cannot uninstall this extension - there is at least one payment processor "
 "using the payment processor type provided by it."
-msgstr ""
+msgstr "Ekstenzija se ne može deinstalirati - postoji barem jedan platni procesor koji koristi tip platnog procesora koji ekstenzija pruža."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
-msgstr ""
+msgstr "Greška pri deinstalaciji"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Installed"
-msgstr ""
+msgstr "Ekstenzija instalirana"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Enabled"
-msgstr ""
+msgstr "Ekstenzija omogućena"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Disabled"
-msgstr ""
+msgstr "Ekstenzija onemogućena"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgraded"
-msgstr ""
+msgstr "Ekstenzija nadograđena"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgrade Failed"
-msgstr ""
+msgstr "Nadogradnja ekstenzije nije uspjela"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
-msgstr ""
+msgstr "Upravljaj - zakazani poslovi"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Entity"
-msgstr ""
+msgstr "Entitet API poziva"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Action"
-msgstr ""
+msgstr "Akcija API poziva"
 
 #: CRM/Admin/Form/Job.php
 msgid "Run frequency"
-msgstr ""
+msgstr "Frekvencija pokretanja"
 
 #: CRM/Admin/Form/Job.php
 msgid "Command parameters"
-msgstr ""
+msgstr "Parametri naredbe"
 
 #: CRM/Admin/Form/Job.php
 msgid "Is this Scheduled Job active?"
-msgstr ""
+msgstr "Je li zakazani posao aktivan?"
 
 #: CRM/Admin/Form/Job.php
 msgid "Given API command is not defined."
-msgstr ""
+msgstr "Zadana API naredba nije definirana"
 
 #: CRM/Admin/Form/Job.php
 msgid "Scheduled Job Deleted."
-msgstr ""
+msgstr "Zakazani posao obrisan."
 
 #: CRM/Admin/Form/Job.php
 msgid ""
@@ -166,7 +167,7 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Is this Label Format the default?"
-msgstr ""
+msgstr "Je li ovo podrazumijevani format labele?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size"
@@ -178,96 +179,96 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Width"
-msgstr ""
+msgstr "Širina labele"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Height"
-msgstr ""
+msgstr "Visina labele"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Row"
-msgstr ""
+msgstr "Labela po retku"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Column"
-msgstr ""
+msgstr "Labela po stupcu"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Horizontal Spacing"
-msgstr ""
+msgstr "Vodoravni razmak"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Vertical Spacing"
-msgstr ""
+msgstr "Okomiti razmak"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Left Padding"
-msgstr ""
+msgstr "Lijevo ispunjavanje"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Top Padding"
-msgstr ""
+msgstr "Gornje ispunjavanje"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Selected Label Format has been deleted."
-msgstr ""
+msgstr "Odabrani format labele je obrisan."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
-msgstr ""
+msgstr "Kopija %1 od %2"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
-msgstr ""
+msgstr "Vaš novi format labele pod nazivom <strong>%1</strong> je spremljen."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your Label Format titled <strong>%1</strong> has been updated."
-msgstr ""
+msgstr "Vaš novi format labele pod nazivom <strong>%1</strong> je ažuriran."
 
 #: CRM/Admin/Form/LocationType.php
 msgid "Name can only consist of alpha-numeric characters"
-msgstr ""
+msgstr "Ime se može sastojati isključivo od alfanumeričkih znakova."
 
 #: CRM/Admin/Form/LocationType.php
 msgid "vCard Name"
-msgstr ""
+msgstr "vCard ime"
 
 #: CRM/Admin/Form/LocationType.php
 msgid "Selected Location type has been deleted."
-msgstr ""
+msgstr "Odabrani tip lokacije je obrisan."
 
 #: CRM/Admin/Form/LocationType.php
 msgid "The location type '%1' has been saved."
-msgstr ""
+msgstr "Tip lokacije '%1' je spremljen."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "Korisnički račun elektroničke pošte"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
-msgstr ""
+msgstr "Domena elektroničke pošte"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Email domain must use a valid internet domain format (e.g. 'example.org')."
-msgstr ""
+msgstr "Domena elektroničke pošte mora koristiti validni format Internet domene (npr. 'example.org')."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "Localpart"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
-msgstr ""
+msgstr "Return-Path"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Return-Path must use a valid email address format."
-msgstr ""
+msgstr "Polje Return-Path mora koristiti validni format elektroničke pošte."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Poslužitelj"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -279,28 +280,28 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Used For?"
-msgstr ""
+msgstr "Koristi se za?"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Please enter a valid domain for this mailbox account (the part after @)."
-msgstr ""
+msgstr "Molimo napišite validnu domenu za ovaj korisnički račun elektroničke pošte (dio iza @)."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
-msgstr ""
+msgstr "Postavka pošte obrisana."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Your New  Email Settings have been saved."
-msgstr ""
+msgstr "Vaše nove postavke elektroničke pošte su spremljene."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Your Email Settings have been updated."
-msgstr ""
+msgstr "Vaše postavke elektroničke pošte su ažurirane."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Changes Not Saved."
-msgstr ""
+msgstr "Izmjene nisu spremljene."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
@@ -309,17 +310,17 @@ msgstr ""
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid "Message Templates"
-msgstr ""
+msgstr "Predlošci poruka"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Message Title"
-msgstr ""
+msgstr "Naslov poruke"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Message Subject"
-msgstr ""
+msgstr "Predmet poruke"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "View System Default Message Template"
@@ -331,23 +332,23 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator?"
-msgstr ""
+msgstr "Separator?"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu '%1' has been saved."
-msgstr ""
+msgstr "Izbornik \"%1\" je spremljen."
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Dropdown Options"
-msgstr ""
+msgstr "Padajuće opcije"
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Selected option group has been deleted."
-msgstr ""
+msgstr "Odabrana grupa opcija je obrisana."
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "The Option Group '%1' has been saved."
-msgstr ""
+msgstr "Grupa opcija '%1' je spremljena."
 
 #: CRM/Admin/Form/Options.php
 msgid ""
@@ -364,7 +365,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php
 msgid "%1 Option"
-msgstr ""
+msgstr "%1 opcija"
 
 #: CRM/Admin/Form/Options.php
 msgid ""
