--- a/po/hr/menu.po
+++ b/po/hr/menu.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Jurica Mikulić <jurica.mikulic@gmail.com>, 2017
 # Kevin Levie <kevin@levity.nl>, 2016
 # Leo Merory <leo@innovative-media.eu>, 2014-2015
 # Pero Krolic <pero.krolic@gmail.com>, 2015
@@ -10,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-14 22:23+0000\n"
+"Last-Translator: Jurica Mikulić <jurica.mikulic@gmail.com>\n"
 "Language-Team: Croatian (http://www.transifex.com/civicrm/civicrm/language/hr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -104,11 +105,11 @@ msgstr "Hvala Vam"
 
 msgctxt "menu"
 msgid "Configure Survey"
-msgstr ""
+msgstr "Podesi anketu"
 
 msgctxt "menu"
 msgid "Delete Survey"
-msgstr ""
+msgstr "Obriši anketu"
 
 msgctxt "menu"
 msgid "CiviCase Dashboard"
