--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 14:21+0000\n"
+"PO-Revision-Date: 2017-02-14 11:04+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -5969,11 +5969,11 @@ msgstr "Veličina fajla mora biti manja od %1 megabajt(a) "
 
 #: CRM/Core/BAO/LabelFormat.php CRM/Core/BAO/PdfFormat.php
 msgid "Portrait"
-msgstr ""
+msgstr "Uspravno"
 
 #: CRM/Core/BAO/LabelFormat.php CRM/Core/BAO/PdfFormat.php
 msgid "Landscape"
-msgstr ""
+msgstr "Poprečno"
 
 #: CRM/Core/BAO/LabelFormat.php
 msgid "%1 pt"
