po: update po/sr_RS@latin/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/extension.po
+++ b/po/sr_RS@latin/extension.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-30 06:36+0000\n"
+"PO-Revision-Date: 2017-02-14 10:48+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -54,7 +54,7 @@ msgstr "Nevažeći osnovni direktorijum"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank directory."
-msgstr ""
+msgstr "Direktorijum za ekstenzije je definisam praznim direktorijumom."
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base URL"
@@ -62,7 +62,7 @@ msgstr "Nevažeći osnovni URL"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank URL."
-msgstr ""
+msgstr "Direktorijum za ekstenzije je definisam praznim URLom."
 
 #: CRM/Extension/Container/Basic.php
 msgid ""
