po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-10 11:20+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-14 13:34+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -161,7 +161,7 @@ msgstr "Ispraćeni odgovori"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Pattern"
-msgstr ""
+msgstr "Obrazac"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Hold Threshold"
@@ -316,7 +316,7 @@ msgstr "Mailing SMS provajder"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Hash"
-msgstr ""
+msgstr "Heš mailinga"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Mailing/Form/Group.php
 msgid "Email Selection Method"
@@ -376,11 +376,11 @@ msgstr "Tip mailing grupe"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Entity Table"
-msgstr ""
+msgstr "Tabela entiteta mailing grupe"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Entity"
-msgstr ""
+msgstr "Entitet mailing grupe"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Search"
@@ -504,7 +504,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Queue.php
 msgid "Security Hash"
-msgstr ""
+msgstr "Bezbednosni heš"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Group"
@@ -641,7 +641,7 @@ msgstr "ISKLJUČI primaoce ovog(ih) mailinga"
 msgid ""
 "You can continue later by clicking the 'Continue' action to resume working "
 "on it.<br />From <a href='%1'>Draft and Unscheduled Mailings</a>."
-msgstr ""
+msgstr "Možete nastaviti kasnije klikom na 'Nastavi' da biste nastavili da radite na njemu.<br />Iz <a href='%1'>Mailing - u pripremi i nezakazani</a>."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Schedule.php
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
@@ -724,7 +724,7 @@ msgid ""
 "Your mailing has been saved. You can continue later by clicking the "
 "'Continue' action to resume working on it.<br />From <a href='%1'>Draft and "
 "Unscheduled Mailings</a>."
-msgstr ""
+msgstr "Vaš mailing je sačuvan. Možete nastaviti kasnije klikom na 'Nastavi' kako biste natavili da radite na njemu.<br />Iz<a href='%1'>Mailing - u pripremi i nezakazani</a>. "
 
 #: CRM/Mailing/Form/Search.php CRM/Mailing/Selector/Browse.php
 msgid "SMS Name"
@@ -1177,11 +1177,11 @@ msgstr "Nema sadržaja za prikaz"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Pogledaj kao HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Pogledaj kao običan tekst"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
@@ -1487,7 +1487,7 @@ msgstr "Ispod je primer prvih %1 primalaca."
 msgid ""
 "If individual contacts are separately modified, added, or removed, then the "
 "final list may change."
-msgstr ""
+msgstr "Ukoliko se pojedinačni konkatki menjaju, dodaju ili brišu, konačna lista će se može promeniti."
 
 #: ang/crmMailing/RadioDate.js
 msgid "The scheduled date and time is in the past"
@@ -1840,7 +1840,7 @@ msgid ""
 "Because this mailing is using the results of a search to provide the "
 "recipient list, you need to specify a group to track people who unsubscribe "
 "in response to this mailing."
-msgstr ""
+msgstr "Pošto ovaj mailing koristi rezultate pretrage da bi kreirao listu, morate naznačiti grupu da biste pratili ljude koji se odjave kao odgovor na ovaj mail."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1849,7 +1849,7 @@ msgid ""
 "achieved through actually marking the contact as \"unsubscribed from the "
 "group\". If a contact in your search results has already been marked as "
 "unsubscribed from that group, they will be excluded from this mailing."
-msgstr ""
+msgstr "Ukoliko se primalac odjavi sa ovoj mailinga, biće izostavljeni iz narednih mailinga koji koriste istu \"Grupu za odjavu\". Ovo se zapravo postiže obeležavanjem kontakta kao \"odjavljen iz grupe\". Ukoliko je kontakt u rezultatima vaše pretrage već obeležen kao odjavljen iz te grupe, biće izostavljen iz ovog mailinga."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1857,7 +1857,7 @@ msgid ""
 "\"Unsubscription Group\" title on the unsubscribe page. The selected group "
 "should have a title that corresponds to the content / type of mailing being "
 "sent."
-msgstr ""
+msgstr "Ukoliko primalac klikne na link za odjavu prikazaće mu se \"Grupa za odjavu\" na stranici za odjavu. Odabrana grupa treba da ima naslov koji odgovara sadržaju / tipu mailinga koji se šalje."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1865,7 +1865,7 @@ msgid ""
 " search critera will not be included in the mailing regardless of their "
 "status in that group. This is a change from previous versions which used the"
 " term \"Base Group\"."
-msgstr ""
+msgstr "Beleška: Kontakti koji se nalaze u \"Grupi za odjavu\", ali ne odgovaraju kriterijumima vaše pretrage, neće biti uključeni u mailing bez obzira na njihov status u grupi. Ovo je izmena iz prethodnih verzija koje su koristile izraz \"Osnovna grupa\"."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Dedupe"
@@ -1883,7 +1883,7 @@ msgid ""
 "However, if the same email is used by multiple contacts, that email address "
 "will receive multiple copies of the email -- one for each contact using that"
 " address."
-msgstr ""
+msgstr "Međutim, ukoliko veći broj kontakata koristi isti email, ta email adresa će primiti veći broj kopija emaila -- po jednu za svaki kontakt koji koristi tu adresu."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1891,7 +1891,7 @@ msgid ""
 "Note that when using this option and including contact tokens in your email "
 "content, the email with it's respective tokens will only be created for one "
 "of the matching contacts."
-msgstr ""
+msgstr "Odabirom ove opcije obezbeđuje da se na svaku adresu pošalje samo po jedan email.  Zapamtite da kada koristite ovu opciju uz korišćenje tokena u sadržaju emaila, email sa odovarajućim tokenima će biti kreiran za samo jedan od odgovarajućih kontakata."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Email selection"
@@ -1902,7 +1902,7 @@ msgid ""
 "Some of your contacts may have more than one email address. By selecting a "
 "location and a selection method, you can tell CiviCRM which email address to"
 " use for this mailing."
-msgstr ""
+msgstr "Neki od vaših kontakata možda imaju više od jedne email adrese. Odabirom lokacije i načina selekcije možete reći CiviCRM-u koju email adresu da upotrebi za ovaj mailing."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1918,7 +1918,7 @@ msgid ""
 "selected, then the recipients will be restricted to only include contacts "
 "that have an email address assigned to the given location. This option may "
 "limit the number of recipients in your mailing."
-msgstr ""
+msgstr "Ukoliko je odabrana opcija \"Pošalji samo na email adrese dodeljene za određenu lokaciju\", kao primaoci će biti obuhvaćeni samo oni kontakti koji imaju email adresu dodeljenu za datu lokaciju. Ova opcija može da ograniči broj primalaca za vaš mailing."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1926,7 +1926,7 @@ msgid ""
 "selected, then recipients that have an email address assigned to the given "
 "location will have that email used. Other recipients will have their email "
 "selected using the automatic method."
-msgstr ""
+msgstr "Ukoliko je odabrana opcija \"Daj prednost email adresama dodeljenim za određenu lokaciju\", onda će primaoci koji imaju email adresu dodeljenu za određenu lokaciju koristiti taj email. Email će za druge primaoce biti odabran automatski."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1935,7 +1935,7 @@ msgid ""
 "location will be excluded. Everyone else will have their email chosen from "
 "the list of emails that are not assigned to the given location, using the "
 "automatic method."
-msgstr ""
+msgstr "Ukoliko je odabrana opcija \"Isključi email adrese dodeljene za određenu lokaciju\", onda će primaoci koji imaju email adresu dodeljenu za datu lokaciju biti izostavljeni. Za sve ostale će njihov email biti automatski izabran sa liste emailova koji nisu dodeljeni za datu lokaciju. "
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1944,7 +1944,7 @@ msgid ""
 "be assigned the <strong>Mailing List</strong> type to be available on this "
 "screen - you can update this for an existing group from <strong>Manage "
 "Groups &raquo; Settings</strong>.)"
-msgstr ""
+msgstr "Odredite kontakte u vašoj bazi koji treba da dobiju ovaj mailing tako što ćete prvo odabrati jednu ili više <strong>Uključenih grupa</strong>. (Grupe moraju imati tip <strong>Mailing liste</strong> da bi bile omogućene na ovom ekranu -za postojeće grupe ovo možete ažurirati u <strong>Uredi grupe &raquo; Podešavanja</strong>.)"
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1952,7 +1952,7 @@ msgid ""
 " included groups by selecting one or more <strong>Excluded Groups</strong>. "
 "Contacts who are in both groups will NOT receive the mailing (they are "
 "'excluded')."
-msgstr ""
+msgstr "Takođe postoji i opcija da <strong>Isključite</strong> neke od kontakata iz grupa uključenih u mailing tako što ćete odabrati jednu ili više  <strong>Isključenih grupa</strong>.  Kontakti koji se nalaze u obe grupe NEĆE dobiti mailing ('isključeni' su)."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1961,7 +1961,7 @@ msgid ""
 "duplications so that contacts who are in an Included Group AND were "
 "recipients of an Included Mailing will only be sent one copy of this "
 "mailing."
-msgstr ""
+msgstr "Ukoliko ste slali druge mailinge - možete dodatno Uključiti (ili Isključiti) kontakte koji dobijaju te mailinge. CiviCRM će ukloniti sve duplikate tako da će kontaktima koji su u Uključenoj grupi i bili su primaoci Uključenog mailinga biti poslata samo jedna kopija ovog mailinga."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1969,7 +1969,7 @@ msgid ""
 "included groups by selecting one or more <strong>Excluded Groups</strong>. "
 "Contacts who are in both groups will NOT receive the mailing (they are "
 "'excluded')."
-msgstr ""
+msgstr "Takođe postoji i opcija da <strong>Isključite</strong> neke od kontakata iz grupa uključenih u mailing tako što ćete odabrati jednu ili više  <strong>Isključenih grupa</strong>.  Kontakti koji se nalaze u obe grupe NEĆE dobiti mailing ('isključeni' su)."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Include Mailings"
@@ -2005,7 +2005,7 @@ msgid ""
 "You can schedule mailings to be sent starting at a specific date and time, "
 "OR you can request that they be sent as soon as possible by checking "
 "&quot;Send Immediately&quot;."
-msgstr ""
+msgstr "Možete zakazati slanje mailinga za određeni datum i vreme, ili možete zahtevati da se pošalje što je pre moguće tako što ćete štiklirati &quot;Pošalji odmah&quot;."
 
 #: templates/CRM/Mailing/Form/Schedule.hlp
 msgid ""
@@ -2019,7 +2019,7 @@ msgid ""
 "Click <strong>Continue Later</strong> if you're not ready to schedule or "
 "send this mailing. Click the <strong>Continue</strong> link from Unscheduled"
 " and Draft Mailings when you are ready to schedule or send it."
-msgstr ""
+msgstr "Kliknite na <strong>Nastavi kasnije</strong> ako niste spremni da zakažete ili pošaljete ovaj mailing. Kliknite na link <strong>Nastavi</strong> u Mailing - u pripremi i nezakazani kada budete želeli da ga zakažete ili pošaljete."
 
 #: templates/CRM/Mailing/Form/Schedule.hlp
 msgid ""
@@ -2034,7 +2034,7 @@ msgid ""
 "You can schedule this mailing to be sent starting at a specific date and "
 "time, OR you can request that it be sent as soon as possible by checking "
 "&quot;Send Immediately&quot;."
-msgstr ""
+msgstr "Možete zakazati slanje ovog mailinga za određeni datum i vreme, ili možete zahtevati da se pošalje što je pre moguće tako što ćete štiklirati &quot;Pošalji odmah&quot;."
 
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid ""
